hphp/hack/test/typecheck/classname/with_tconst_bad2.php.like_types.exp
File "with_tconst_bad2.php", line 13, characters 29-34:
Wrong type hint (Typing[4110])
File "with_tconst_bad2.php", line 12, characters 19-19:
Expected C
File "with_tconst_bad2.php", line 13, characters 19-26:
  resulting from expanding the type constant this::Ti
File "classes.hhi", line 198, characters 13-20:
But got dynamic because it is an unenforceable type
